--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
     padding: 5px 15px;
     border: none;
     border-radius: 8px;
-    background-color: rgb(65, 65, 238);
+    background-color: #3882F6;
     color: white;
     font-weight: bold;
     font-size: 18px;
@@ -107,6 +107,10 @@ ul {
     margin: 10px;
 }
 
+.images {
+    width: 320px;
+}
+
 .images img {
     width: 200px;
     height: 200px;
@@ -125,7 +129,21 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: 1200px;
+}
+
+blockquote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 800px;
+    padding: 45px 0 20px 0;
+}
+
+blockquote p {
+    text-align: end;
+    font-weight: 900;
+    align-self: flex-end;
 }
 
 .content-three {
