--- a/style.css
+++ b/style.css
@@ -12,12 +12,14 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #1F2937;
-    flex-grow: 3;
+    flex: 3;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .header-links, .header-content, ul {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .header-links {
@@ -50,6 +52,11 @@ body {
     flex-basis: 750px;
     text-wrap: pretty;
     display: inline-block;
+}
+
+.header-content img {
+    border-radius: 8px;
+    display: block;
 }
 
 .header-content button {
@@ -85,13 +92,14 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-grow: 2;
+    flex: 2;
 }
 
 .inner-content-one {
     display: flex;
     justify-content: center;
     padding-bottom: 60px;
+    flex-wrap: wrap;
 }
 
 .header-text {
@@ -118,10 +126,11 @@ ul {
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 15px;
+    border-radius: 8px;
   }
 
 .content-two {
-    flex-grow: 2;
+    flex: 2;
     background-color: #E5E7EB;
     color: #1F2937;
     font-style: italic;
@@ -147,12 +156,40 @@ blockquote p {
 }
 
 .content-three {
-    background-color: #3882F6;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     min-width: 700px;
-    flex-grow: 1;
+    flex: 1;
+}
+
+.inner-content-three {
+    background-color: #3882F6;
+    margin: 60px 50px;
+    width: 1200px;
+    display: flex;
+    justify-content: space-around;
+    border-radius: 8px;
+    flex-wrap: wrap;
+}
+
+.inner-content-three div, button {
+    padding: 25px 0;
+    color: #E5E7EB;
+    font-size: 22px;
+}
+
+.inner-content-three div h4 {
+    margin-bottom: -20px;
+}
+
+.inner-content-three button {
+    margin: 50px;
+    background-color: #3882F6;
+    border: 2px white solid;
+    padding: 5px 30px;
+    font-weight: 900;
+    border-radius: 8px;
 }
 
 .footer {
@@ -163,4 +200,5 @@ blockquote p {
     background-color: #1F2937;
     color: white;
     padding: 25px;
+    font-size: 18px;
 }
