Change the font size and margin of the H4 in the fourth section

--- a/style.css
+++ b/style.css
@@ -179,8 +179,14 @@ blockquote p {
     font-size: 22px;
 }
 
+.inner-content-three p {
+    font-size: 17px;
+}
+
 .inner-content-three div h4 {
-    margin-bottom: -20px;
+    margin: 16px 0 -20px 0;
+    font-size: 26px;
+    color: white;
 }
 
 .inner-content-three button {
